# diannaojiankong

./: .gitignore  IMPLEMENTATION_PLAN.md  PROJECT.md  README.md  build.sh  start.sh  system_monitor.py  web_monitor.py  使用演示.md  保存快照.bat  启动Web监控.bat  启动监控.bat  启动说明.txt  快速启动指南.txt  文件清单.md  项目完成总结.md  项目说明.md
backend/: .env.example  alembic.ini  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 20260607_0001_initial.py
backend/app/: __init__.py  main.py
backend/app/core/: config.py  database.py  dependencies.py  exceptions.py  responses.py  security.py
backend/app/modules/auth/: router.py  schemas.py  service.py
backend/app/modules/resumes/: __init__.py  models.py  repository.py  router.py  schemas.py  service.py
backend/app/modules/system/: router.py
backend/app/modules/users/: models.py  seed.py
backend/tests/: test_auth.py  test_health.py  test_resumes.py
frontend/: index.html  package.json  vite.config.ts
frontend/src/: main.tsx
frontend/src/app/: App.test.tsx  App.tsx  ProtectedRoute.tsx  router.tsx  styles.css
frontend/src/features/auth/: LoginPage.tsx  authApi.ts
frontend/src/features/resume/: ResumeEditPage.tsx  ResumeListPage.tsx  resumeApi.ts  types.ts
frontend/src/features/workspace/: WorkspacePage.tsx
frontend/src/lib/: apiClient.ts  authToken.ts
scripts/: dev.sh
